--- a/Draw/Controller/Contest/ContestView.xib
+++ b/Draw/Controller/Contest/ContestView.xib
@@ -13,6 +13,7 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIWebView</string>
 			<string>IBUIButton</string>
+			<string>IBUIImageView</string>
 			<string>IBUIView</string>
 			<string>IBProxyObject</string>
 		</array>
@@ -32,43 +33,54 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="754170635">
+			<object class="IBUIView" id="93199463">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIWebView" id="839603783">
-						<reference key="NSNextResponder" ref="754170635"/>
-						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{280, 348}</string>
-						<reference key="NSSuperview" ref="754170635"/>
+					<object class="IBUIImageView" id="909456324">
+						<reference key="NSNextResponder" ref="93199463"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{10, 5}, {300, 350}}</string>
+						<reference key="NSSuperview" ref="93199463"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="19956342"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="252164724">
+						<reference key="NSNextKeyView" ref="395969670"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
+					<object class="IBUIWebView" id="395969670">
+						<reference key="NSNextResponder" ref="93199463"/>
+						<int key="NSvFlags">301</int>
+						<string key="NSFrame">{{15, 13}, {290, 306}}</string>
+						<reference key="NSSuperview" ref="93199463"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="652988910"/>
+						<object class="NSColor" key="IBUIBackgroundColor" id="533063747">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MSAxIDEAA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIScalesPageToFit">YES</bool>
 						<int key="IBUIDataDetectorTypes">1</int>
 						<bool key="IBUIDetectsPhoneNumbers">YES</bool>
 					</object>
-					<object class="IBUIButton" id="19956342">
-						<reference key="NSNextResponder" ref="754170635"/>
+					<object class="IBUIButton" id="652988910">
+						<reference key="NSNextResponder" ref="93199463"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 351}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="754170635"/>
+						<string key="NSFrame">{{30, 322}, {72, 30}}</string>
+						<reference key="NSSuperview" ref="93199463"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="386789709"/>
+						<reference key="NSNextKeyView" ref="119445059"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">作品(100)</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="846010287">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="44759917">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
-						<reference key="IBUINormalTitleColor" ref="252164724"/>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="684558393">
+						<reference key="IBUINormalTitleColor" ref="533063747"/>
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="21697313">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 						</object>
@@ -76,43 +88,43 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">orange_button@2x.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="662707215">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="705462445">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="871255990">
+						<object class="NSFont" key="IBUIFont" id="609114934">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="386789709">
-						<reference key="NSNextResponder" ref="754170635"/>
+					<object class="IBUIButton" id="119445059">
+						<reference key="NSNextResponder" ref="93199463"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{104, 351}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="754170635"/>
+						<string key="NSFrame">{{124, 322}, {72, 30}}</string>
+						<reference key="NSSuperview" ref="93199463"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="566223044"/>
+						<reference key="NSNextKeyView" ref="357900549"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">详情</string>
-						<reference key="IBUIHighlightedTitleColor" ref="846010287"/>
-						<reference key="IBUINormalTitleColor" ref="252164724"/>
-						<reference key="IBUINormalTitleShadowColor" ref="684558393"/>
+						<reference key="IBUIHighlightedTitleColor" ref="44759917"/>
+						<reference key="IBUINormalTitleColor" ref="533063747"/>
+						<reference key="IBUINormalTitleShadowColor" ref="21697313"/>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">normal_button@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="662707215"/>
-						<reference key="IBUIFont" ref="871255990"/>
+						<reference key="IBUIFontDescription" ref="705462445"/>
+						<reference key="IBUIFont" ref="609114934"/>
 					</object>
-					<object class="IBUIButton" id="566223044">
-						<reference key="NSNextResponder" ref="754170635"/>
+					<object class="IBUIButton" id="357900549">
+						<reference key="NSNextResponder" ref="93199463"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{199, 351}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="754170635"/>
+						<string key="NSFrame">{{219, 322}, {72, 30}}</string>
+						<reference key="NSSuperview" ref="93199463"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -120,33 +132,107 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">参加(100)</string>
-						<reference key="IBUIHighlightedTitleColor" ref="846010287"/>
-						<reference key="IBUINormalTitleColor" ref="252164724"/>
-						<reference key="IBUINormalTitleShadowColor" ref="684558393"/>
+						<reference key="IBUIHighlightedTitleColor" ref="44759917"/>
+						<reference key="IBUINormalTitleColor" ref="533063747"/>
+						<reference key="IBUINormalTitleShadowColor" ref="21697313"/>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">green_button@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="662707215"/>
-						<reference key="IBUIFont" ref="871255990"/>
+						<reference key="IBUIFontDescription" ref="705462445"/>
+						<reference key="IBUIFont" ref="609114934"/>
 					</object>
 				</array>
-				<string key="NSFrameSize">{280, 390}</string>
+				<string key="NSFrameSize">{320, 360}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="839603783"/>
+				<reference key="NSNextKeyView" ref="909456324"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<object class="NSColorSpace" key="NSCustomColorSpace">
-						<int key="NSID">2</int>
-					</object>
+					<bytes key="NSWhite">MCAwAA</bytes>
 				</object>
+				<bool key="IBUIClipsSubviews">YES</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array class="NSMutableArray" key="connectionRecords"/>
+			<array class="NSMutableArray" key="connectionRecords">
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">webView</string>
+						<reference key="source" ref="93199463"/>
+						<reference key="destination" ref="395969670"/>
+					</object>
+					<int key="connectionID">9</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">opusButton</string>
+						<reference key="source" ref="93199463"/>
+						<reference key="destination" ref="652988910"/>
+					</object>
+					<int key="connectionID">10</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">detailButton</string>
+						<reference key="source" ref="93199463"/>
+						<reference key="destination" ref="119445059"/>
+					</object>
+					<int key="connectionID">11</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">joinButton</string>
+						<reference key="source" ref="93199463"/>
+						<reference key="destination" ref="357900549"/>
+					</object>
+					<int key="connectionID">12</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">bgView</string>
+						<reference key="source" ref="93199463"/>
+						<reference key="destination" ref="909456324"/>
+					</object>
+					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="395969670"/>
+						<reference key="destination" ref="93199463"/>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickOpusButton:</string>
+						<reference key="source" ref="652988910"/>
+						<reference key="destination" ref="93199463"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">13</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickDetailButton:</string>
+						<reference key="source" ref="119445059"/>
+						<reference key="destination" ref="93199463"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">15</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickJoinButton:</string>
+						<reference key="source" ref="357900549"/>
+						<reference key="destination" ref="93199463"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">16</int>
+				</object>
+			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
@@ -168,34 +254,40 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="754170635"/>
+						<reference key="object" ref="93199463"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="839603783"/>
-							<reference ref="19956342"/>
-							<reference ref="386789709"/>
-							<reference ref="566223044"/>
+							<reference ref="652988910"/>
+							<reference ref="119445059"/>
+							<reference ref="357900549"/>
+							<reference ref="395969670"/>
+							<reference ref="909456324"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="839603783"/>
-						<reference key="parent" ref="754170635"/>
+						<reference key="object" ref="395969670"/>
+						<reference key="parent" ref="93199463"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="19956342"/>
-						<reference key="parent" ref="754170635"/>
+						<reference key="object" ref="652988910"/>
+						<reference key="parent" ref="93199463"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
-						<reference key="object" ref="386789709"/>
-						<reference key="parent" ref="754170635"/>
+						<reference key="object" ref="119445059"/>
+						<reference key="parent" ref="93199463"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="566223044"/>
-						<reference key="parent" ref="754170635"/>
+						<reference key="object" ref="357900549"/>
+						<reference key="parent" ref="93199463"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">18</int>
+						<reference key="object" ref="909456324"/>
+						<reference key="parent" ref="93199463"/>
 					</object>
 				</array>
 			</object>
@@ -204,6 +296,7 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">ContestView</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -215,13 +308,61 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">8</int>
+			<int key="maxID">21</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">ContestView</string>
 					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="clickDetailButton:">id</string>
+						<string key="clickJoinButton:">id</string>
+						<string key="clickOpusButton:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="clickDetailButton:">
+							<string key="name">clickDetailButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickJoinButton:">
+							<string key="name">clickJoinButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickOpusButton:">
+							<string key="name">clickOpusButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bgView">UIImageView</string>
+						<string key="detailButton">UIButton</string>
+						<string key="joinButton">UIButton</string>
+						<string key="opusButton">UIButton</string>
+						<string key="webView">UIWebView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bgView">
+							<string key="name">bgView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="detailButton">
+							<string key="name">detailButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="joinButton">
+							<string key="name">joinButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="opusButton">
+							<string key="name">opusButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="webView">
+							<string key="name">webView</string>
+							<string key="candidateClassName">UIWebView</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ContestView.h</string>
